# logjuicer

./: Cargo.toml  flake.nix
.github/workflows/: release.yml
crates/cli/src/: main.rs  serve.rs
crates/koji/: Cargo.toml  README.md
crates/koji/src/: koji_build.rs
crates/report/: schema.capnp
crates/report/src/: report.rs  report_row.rs
crates/web-service/src/: routes.rs  worker.rs
doc/: RELEASE-CHECKLIST.md
